# nimiq_gleam

./: README.md  gleam.toml  manifest.toml
.github/workflows/: test.yml
native/bls/: Cargo.toml
native/bls/src/: lib.rs
src/: address.gleam  base32.gleam  bls.erl  coin.gleam  nimiq_gleam.gleam  policy.gleam  transaction.gleam
src/account/: account.gleam  account_type.gleam  address.gleam
src/bindings/: blake2.gleam  bls.gleam  ed25519.gleam  varint.gleam
src/bls/: compressed_public_key.gleam  compressed_signature.gleam  secret_key.gleam
src/cli/: address_command.gleam  new_transaction_command.gleam  transaction_command.gleam
src/key/: public_key.gleam  signature.gleam
src/key/ed25519/: private_key.gleam  public_key.gleam  signature.gleam
src/merkle/: merkle_path.gleam
src/nimiq_gleam/internal/: varint.gleam
src/transaction/: enums.gleam  flags.gleam  network_id.gleam  signature_proof.gleam  signature_proof_algorithm.gleam  signature_proof_flags.gleam  staking_data.gleam  transaction.gleam  transaction_builder.gleam  transaction_flags.gleam  transaction_format.gleam
src/utils/: misc.gleam  serde.gleam
test/: address_test.gleam  bls_test.gleam  dummy.gleam  nimiq_gleam_test.gleam  transaction_test.gleam
test/bindings/: blake2_test.gleam  bls_test.gleam  ed25519_test.gleam
test/key/ed25519/: private_key_test.gleam  public_key_test.gleam  signature_test.gleam
test/merkle/: merkle_path_test.gleam
test/transaction/: signature_proof_test.gleam  staking_data_test.gleam  transaction_builder_test.gleam  transaction_test.gleam
